--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,140 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_bg"
-    tools:context=".MainActivity"
-    >
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/health"
-        android:layout_width="160dp"
-        android:layout_height="139dp"
-        android:layout_marginTop="564dp"
-        app:cardBackgroundColor="#4E5567"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.858"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/health_image"
-                android:layout_width="match_parent"
-                android:layout_height="105dp"
-                android:padding="5dp"
-                android:paddingLeft="3dp"
-                android:paddingRight="3dp"
-                app:srcCompat="@drawable/health" />
-
-            <TextView
-                android:id="@+id/health_text"
-                android:layout_width="141dp"
-                android:layout_height="wrap_content"
-                android:text="건강데이터"
-                android:textAlignment="viewEnd"
-                android:textColor="#F3F3F3"
-                android:textSize="20sp" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/escape"
-        android:layout_width="160dp"
-        android:layout_height="180dp"
-        android:layout_marginTop="524dp"
-        app:cardBackgroundColor="#9DD6B8"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.14"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/escape_image"
-                android:layout_width="143dp"
-                android:layout_height="149dp"
-                android:paddingLeft="3dp"
-                android:paddingTop="10dp"
-                android:paddingRight="3dp"
-                app:srcCompat="@drawable/weight" />
-
-            <TextView
-                android:id="@+id/escape_text"
-                android:layout_width="144dp"
-                android:layout_height="wrap_content"
-                android:text="탈출알림"
-                android:textAlignment="textEnd"
-                android:textColor="#FDFDFD"
-                android:textSize="20sp" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cam"
-        android:layout_width="160dp"
-        android:layout_height="161dp"
-        android:layout_marginTop="120dp"
-        app:cardBackgroundColor="#FA6E5A"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.86"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/cam_image"
-                android:layout_width="147dp"
-                android:layout_height="wrap_content"
-                android:paddingLeft="3dp"
-                android:paddingTop="10dp"
-                android:paddingRight="3dp"
-                app:srcCompat="@drawable/cam_image" />
-
-            <TextView
-                android:id="@+id/came_text"
-                android:layout_width="139dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="CAM"
-                android:textAlignment="viewEnd"
-                android:textColor="#FDFDFD"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
+    tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/humidity"
         android:layout_width="160dp"
         android:layout_height="202dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
         app:cardBackgroundColor="#79C2F4"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toStartOf="@+id/cam"
+        app:layout_constraintHorizontal_chainStyle="packed">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -187,16 +68,93 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cam"
+        android:layout_width="160dp"
+        android:layout_height="161dp"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="#FA6E5A"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/humidity"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/cam_image"
+                android:layout_width="147dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="3dp"
+                android:paddingTop="10dp"
+                android:paddingRight="3dp"
+                app:srcCompat="@drawable/cam_image" />
+
+            <TextView
+                android:id="@+id/came_text"
+                android:layout_width="139dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="CAM"
+                android:textAlignment="viewEnd"
+                android:textColor="#FDFDFD"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/feed"
+        android:layout_width="160dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="#FEB18F"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/humidity"
+        app:layout_constraintStart_toStartOf="@id/humidity">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/feed_image"
+                android:layout_width="148dp"
+                android:layout_height="120dp"
+                android:padding="10dp"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
+                android:paddingBottom="0dp"
+                app:srcCompat="@drawable/feed_time" />
+
+            <TextView
+                android:id="@+id/feed_text"
+                android:layout_width="148dp"
+                android:layout_height="wrap_content"
+                android:text="급식관리"
+                android:textAlignment="textEnd"
+                android:textColor="#FBFBFB"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/activity"
         android:layout_width="159dp"
         android:layout_height="239dp"
-        android:layout_marginStart="216dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="20dp"
         app:cardBackgroundColor="#FFCF86"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/cam"
+        app:layout_constraintStart_toStartOf="@id/cam">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -225,43 +183,76 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/feed"
+        android:id="@+id/escape"
         android:layout_width="160dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="348dp"
-        app:cardBackgroundColor="#FEB18F"
+        android:layout_height="180dp"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="#9DD6B8"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.144"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/feed"
+        app:layout_constraintStart_toStartOf="@id/feed">
 
         <LinearLayout
-            android:layout_width="159dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center">
 
             <ImageView
-                android:id="@+id/feed_image"
-                android:layout_width="148dp"
-                android:layout_height="120dp"
-                android:padding="10dp"
+                android:id="@+id/escape_image"
+                android:layout_width="143dp"
+                android:layout_height="149dp"
                 android:paddingLeft="3dp"
+                android:paddingTop="10dp"
                 android:paddingRight="3dp"
-                android:paddingBottom="0dp"
-                app:srcCompat="@drawable/feed_time" />
+                app:srcCompat="@drawable/weight" />
 
             <TextView
-                android:id="@+id/feed_text"
-                android:layout_width="148dp"
+                android:id="@+id/escape_text"
+                android:layout_width="144dp"
                 android:layout_height="wrap_content"
-                android:text="급식관리"
+                android:text="탈출알림"
                 android:textAlignment="textEnd"
-                android:textColor="#FBFBFB"
+                android:textColor="#FDFDFD"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/health"
+        android:layout_width="160dp"
+        android:layout_height="139dp"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="#4E5567"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/activity"
+        app:layout_constraintStart_toStartOf="@id/activity">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/health_image"
+                android:layout_width="match_parent"
+                android:layout_height="105dp"
+                android:padding="5dp"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
+                app:srcCompat="@drawable/health" />
+
+            <TextView
+                android:id="@+id/health_text"
+                android:layout_width="141dp"
+                android:layout_height="wrap_content"
+                android:text="건강데이터"
+                android:textAlignment="viewEnd"
+                android:textColor="#F3F3F3"
                 android:textSize="20sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
-
