--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,6 +73,7 @@
         android:layout_height="161dp"
         android:clickable="true"
         android:focusable="true"
+        android:elevation="10dp"
         android:layout_marginTop="20dp"
         app:cardBackgroundColor="#FA6E5A"
         app:cardCornerRadius="12dp"
@@ -92,6 +93,8 @@
                 android:id="@+id/cam_image"
                 android:layout_width="147dp"
                 android:layout_height="wrap_content"
+                android:clickable="false"
+                android:focusable="false"
                 android:paddingLeft="3dp"
                 android:paddingTop="10dp"
                 android:paddingRight="3dp"
